--- a/index.html
+++ b/index.html
@@ -1,12 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Password Generator</title>
 </head>
+
 <body>
-  
+
+  <!-- INSERT HTML HERE -->
+  <div class="container">
+    <h2>Password Generator</h2>
+    <div class="result-container">
+      <span id="result"></span>
+      <button class="btn" id="clipboard">
+        <i class="far fa-clipboard"></i>
+      </button>
+    </div>
+    <div class="settings">
+      <div class="setting">
+        <label>Password length</label>
+        <input type="number" id="length" min='4' max='20' value='20' />
+      </div>
+      <div class="setting">
+        <label>Include uppercase letters</label>
+        <input type="checkbox" id="uppercase" checked />
+      </div>
+      <div class="setting">
+        <label>Include lowercase letters</label>
+        <input type="checkbox" id="lowercase" checked />
+      </div>
+      <div class="setting">
+        <label>Include numbers</label>
+        <input type="checkbox" id="numbers" checked />
+      </div>
+      <div class="setting">
+        <label>Include symbols</label>
+        <input type="checkbox" id="symbols" checked />
+      </div>
+    </div>
+    <button class="btn btn-large" id="generate">
+      Generate password
+    </button>
+  </div>
+
+
+  <!-- SOCIAL PANEL HTML -->
+  <div class="social-panel-container">
+    <div class="social-panel">
+      <p>Created with <i class="fa fa-heart"></i> by
+        <a target="_blank" href=""> Tim Weinert</a></p>
+      <button class="close-btn"><i class="fas fa-times"></i></button>
+      <h4>Get in touch on</h4>
+      <ul>
+        <li>
+          <a href=" " target="_blank">
+            <i class="fab fa-discord"></i>
+          </a>
+        </li>
+        <li>
+          <a href=" " target="_blank">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href=" " target="_blank">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a href=" " target="_blank">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href=" " target="_blank">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <button class="floating-btn">
+    Get in Touch
+  </button>
+
+  <div class="floating-text">
+    Part of <a href=" " target="_blank">#100Days100Projects</a>
+  </div>
+
 </body>
+
 </html>
