--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Password Generator</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -17,8 +18,7 @@
     <div class="result-container">
       <span id="result"></span>
       <button class="btn" id="clipboard">
-        <i class="far fa-clipboard"></i>
-      </button>
+          <i class="fa fa-clipboard"></i>              </button>
     </div>
     <div class="settings">
       <div class="setting">
