script link added

--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
     Part of <a href=" " target="_blank">#100Days100Projects</a>
   </div>
 
+
+  <!-- JAVASCRIPT -->
+
+<script src="app.js"></script>
+
 </body>
 
 </html>
